/**
 * @file ScheduleRepository.h
 * @brief Stores the active schedules produced by the matching layer.
 * @author Yap Hui Xin
 */
#ifndef SCHEDULE_REPOSITORY_H
#define SCHEDULE_REPOSITORY_H

#include "Schedule.h"
#include <vector>
using namespace std;

/**
 * @brief Owns the collection of currently active schedules generated by the matcher.
 * @author Yap Hui Xin
 */
class ScheduleRepository {
private:
    vector<Schedule> activeSchedules;

public:
    void addSchedule(const Schedule& schedule);
    const vector<Schedule>& getSchedules() const;
    void clear();
};

#endif
